bissl was an liste gemacht

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,25 @@
     padding: 3vh;
 }
 
+.white_container_list{
+    background-color: white;
+    border-radius: 5px;
+    margin: 1vh;
+    padding: 3vh;
+}
+
+.white_container_list:hover{
+    cursor: pointer;
+}
+
+.white_container_collapse{
+    background-color: white;
+    border-radius: 5px;
+    margin-left: 1vh;
+    margin-right: 1vh;
+    padding: 3vh;
+}
+
 .createAccountInputMobile{
     margin-bottom: 2vh;
 }
