--- a/src/style.css
+++ b/src/style.css
@@ -27,3 +27,9 @@
 .createAccountInputMobile{
     margin-bottom: 2vh;
 }
+
+.account_selection{
+    margin: 0;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+}
